--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  font-family: Comic;
+}
+
+@font-face {
+  font-family: Comic;
+  src: url(./assets/COMIC.TTF);
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h3 {
+  color: rgb(82, 82, 82);
+}
+.app {
+  padding: 20px 40px;
+}
+input[type="text"] {
+  padding: 4px 8px;
+  border: 3px solid gray;
+  color: gray;
+  border-radius: 5px;
+}
+input[type="text"]:focus {
+  outline: none;
+  border: 3px solid gray;
+}
+input[type="file"]::-webkit-file-upload-button {
+  margin-right: 20px;
+}
+input[type="file"]::-webkit-file-upload-button,
+button {
+  padding: 5px 10px;
+  background: gray;
+  color: white;
+  border: 3px solid gray;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+input[type="file"]::-webkit-file-upload-button:hover,
+button:hover {
+  background: white;
+  color: gray;
 }
